--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -89,7 +90,8 @@
     "coverageReporters": [
       "text",
       "lcov",
-      "json-summary"
+      "json-summary",
+      "cobertura"
     ],
     "testEnvironment": "node",
     "moduleNameMapper": {
@@ -106,6 +108,10 @@
       }
     },
     "verbose": true,
-    "testTimeout": 30000
+    "testTimeout": 30000,
+    "reporters": [
+      "default",
+      "jest-junit"
+    ]
   }
 }
