feat: Implementación completa backend con CI/CD pipeline
- Configuración de SonarCloud con sonar-project.properties
- Pipeline de 4 stages: Build, SonarCloud, Deploy, JMeter
- Tests unitarios con 100% coverage objetivo
- JMeter performance testing para APIs
- Documentación técnica actualizada (BACKEND_DOC.md)
- Integración con Azure App Service
- Node.js 20.x runtime
- Análisis de calidad de código automatizado
- Instalación de eslint-config-airbnb-base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "SonarQube-Conection",
         "projectKey": "iduertom_BarberMatch-backend"
-    }
+    },
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
