--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,25 @@
   },
   "plugins": ["@typescript-eslint"],
   "extends": [
-    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
   "env": {
     "node": true,
-    "es2023": true
+    "es2023": true,
+    "jest": true
   },
-  "rules": {}
+  "ignorePatterns": [".eslintrc.json", "dist", "node_modules", "coverage"],
+  "rules": {
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-var-requires": "warn",
+    "no-console": "warn",
+    "no-useless-constructor": "off",
+    "no-empty-function": "off",
+    "class-methods-use-this": "off"
+  }
 }
