fix: Add jest-junit reporter to generate test execution reports for SonarCloud
- Install jest-junit as devDependency
- Configure Jest to generate JUnit XML reports in coverage/junit.xml
- Update SonarCloud pipeline to use sonar.testExecutionReportPaths
- This fixes the SonarCloud parsing error for test execution reports

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,6 +108,7 @@ stages:
         cliSources: 'src'
         extraProperties: |
           sonar.javascript.lcov.reportPaths=coverage/lcov.info
+          sonar.testExecutionReportPaths=coverage/junit.xml
           sonar.exclusions=**/*.spec.ts,**/*.test.ts,**/node_modules/**,**/dist/**,**/coverage/**
           sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts
           sonar.tests=src
