--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -94,7 +95,14 @@
         "lines": 75,
         "statements": 75
       }
-    }
+    },
+    "reporters": [
+      "default",
+      ["jest-junit", {
+        "outputDirectory": "coverage",
+        "outputName": "junit.xml"
+      }]
+    ]
   },
   "engines": {
     "node": ">=16.0.0",
