fix: Apply Gemini's solution for SonarCloud pipeline issues
- Correct projectKey to 'iduertom_BarberMatch-Backend' (proper format)
- Simplify SonarCloudPrepare@3 configuration to prevent blocking
- Remove conflicting CLI scanner properties (scannerMode, configMode, cliProjectKey, cliSources)
- Remove excessive test execution and coverage properties that cause parsing conflicts
- Keep only essential properties: lcov.info path and basic exclusions
- This should resolve the 'Process project properties' hang issue

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ variables:
   # --- CONEXIÓN CON SONARCLOUD ---
   sonarCloudServiceConnection: 'SonarQube-Connection'
   sonarCloudOrganization: 'iduertom'
-  sonarCloudProjectKey: 'BarberMatch-backend' # <--- CAMBIAR SI ES NECESARIO
+  sonarCloudProjectKey: 'iduertom_BarberMatch-Backend' # <--- ¡CORREGIDO!
   
   # --- CONEXIÓN CON AZURE ---
   azureSubscription: 'AzureServiceConnection'
@@ -101,18 +101,11 @@ stages:
       inputs:
         SonarCloud: '$(sonarCloudServiceConnection)'
         organization: '$(sonarCloudOrganization)'
-        scannerMode: 'CLI'
-        configMode: 'manual'
-        cliProjectKey: '$(sonarCloudProjectKey)'
-        cliProjectName: 'BarberMatch Backend API'
-        cliSources: 'src'
+        projectKey: '$(sonarCloudProjectKey)'
+        projectName: 'BarberMatch Backend API'
         extraProperties: |
           sonar.javascript.lcov.reportPaths=coverage/lcov.info
-          sonar.testExecutionReportPaths=coverage/junit.xml
-          sonar.exclusions=**/*.spec.ts,**/*.test.ts,**/node_modules/**,**/dist/**,**/coverage/**
-          sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts
-          sonar.tests=src
-          sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
+          sonar.exclusions=**/*.spec.ts, **/*.test.ts, **/node_modules/**, **/dist/**
           
     - task: SonarCloudAnalyze@3
       displayName: '🔍 Run Code Analysis'
