fix: Force CLI scanner mode to prevent MSBuild scanner usage
The pipeline was failing because SonarCloud was trying to use MSBuild scanner
(for .NET projects) instead of CLI scanner for Node.js/TypeScript project.

- Add scannerMode: 'CLI' to explicitly use JavaScript/TypeScript scanner
- Add configMode: 'manual' for explicit configuration
- This prevents the MSBuild integration error and forces correct scanner type

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,6 +101,8 @@ stages:
       inputs:
         SonarCloud: '$(sonarCloudServiceConnection)'
         organization: '$(sonarCloudOrganization)'
+        scannerMode: 'CLI'
+        configMode: 'manual'
         projectKey: '$(sonarCloudProjectKey)'
         projectName: 'BarberMatch Backend API'
         extraProperties: |
