fix: Use cliProjectKey and cliProjectName for CLI scanner mode
When using scannerMode: 'CLI', SonarCloud requires:
- cliProjectKey instead of projectKey
- cliProjectName instead of projectName
- cliSources to specify source directory

This resolves the 'Input required: cliProjectKey' error.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,8 +103,9 @@ stages:
         organization: '$(sonarCloudOrganization)'
         scannerMode: 'CLI'
         configMode: 'manual'
-        projectKey: '$(sonarCloudProjectKey)'
-        projectName: 'BarberMatch Backend API'
+        cliProjectKey: '$(sonarCloudProjectKey)'
+        cliProjectName: 'BarberMatch Backend API'
+        cliSources: 'src'
         extraProperties: |
           sonar.javascript.lcov.reportPaths=coverage/lcov.info
           sonar.exclusions=**/*.spec.ts, **/*.test.ts, **/node_modules/**, **/dist/**
